2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* tab.x3dv:
	* X3DNavigationInfoEditorInterface.h:
	* NavigationInfoEditor.h:
	* X3DNavigationInfoEditorInterface.cpp:
	* NavigationInfoEditor.cpp: 

2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* tab.x3dv:
	* LODEditor.xml:
	* LightEditor.xml:
	* MFStringWidget.h:
	* InlineEditor.xml:
	* TextureEditor.xml:
	* MFStringURLWidget.h:
	* ViewpointEditor.xml:
	* X3DLODEditorInterface.cpp:
	* X3DBrowserWindowInterface.h:
	* PrecisionPlacementPanel.xml:
	* X3DBrowserWindowInterface.cpp:
	* X3DNavigationInfoEditorInterface.h:
	* X3DNavigationInfoEditorInterface.cpp:
	* NavigationInfoEditor.h:
	* NavigationInfoEditor.cpp: 

2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* tab.x3dv:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp: 

2014-09-10  Holger Seelig  <holger.seelig@yahoo.de>

	* tab.x3dv: 

2014-09-09  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* AboutTab.h:
	* AboutTab.cpp:
	* X3DBrowserWidget.h:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp: 

2014-09-09  Holger Seelig  <holger.seelig@yahoo.de>

	* tab.x3dv: 

2014-09-09  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* X3DBrowserWidget.h:
	* tab.x3dv:
	* X3DBrowserWidget.cpp:
	* History.h:
	* History.cpp:
	* FileSaveDialog.cpp:
	* X3DFileSaveDialogInterface.h:
	* X3DFileSaveDialogInterface.cpp: 

2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* FileSaveDialog.xml:
	* FileSaveDialog.cpp:
	* X3DFileSaveDialogInterface.h:
	* X3DFileSaveDialogInterface.cpp: 

2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>

	* FileSaveDialog.cpp:
	* X3DPixelTextureEditor.h:
	* X3DPixelTextureEditor.cpp: 

2014-09-08  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* home.x3dv:
	* FileSaveDialog.xml:
	* FileSaveDialog.h:
	* FileSaveDialog.cpp: