@@ -1155,7 +1155,7 @@
                                 <property name="label" translatable="yes">Hide Unselected Objects</property>
                                 <property name="use_underline">True</property>
                                 <signal name="activate" handler="on_hide_unselected_objects_activate" swapped="no"/>
-                                <accelerator key="y" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                                <accelerator key="g" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
@@ -1175,7 +1175,7 @@
                                 <property name="label" translatable="yes">Show All Objects</property>
                                 <property name="use_underline">True</property>
                                 <signal name="activate" handler="on_show_all_objects_activate" swapped="no"/>
-                                <accelerator key="y" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                                <accelerator key="g" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                               </object>
                             </child>
                             <child>
