@@ -178,7 +178,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">This file imports one or more nodes from this Inline node.</property>
+                    <property name="label" translatable="yes">This scene imports one or more nodes from this Inline node.</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
